✨ feat(BoardGameService class): Add new methods
Add new service methods for multiple filters